Fix horizontal scrolling

--- a/css/index.css
+++ b/css/index.css
@@ -40,6 +40,7 @@
 
 body{
     width: 100%;
+    overflow-y: hidden;
 }
 
 header{
